# cuckoo-bananas

./: .gitignore  Dockerfile  config.json.template  main.py  pyproject.toml
.github/workflows/: docker-image.yml
static/: index.html
